# smc8-project

./: .gitignore  README.md  osc_max.maxpat  placeholder-patch.maxpat
OSC_test/: osc_client  osc_client.cpp  osc_server  osc_server.cpp
Test Data Analysis/: AlternativeTestQuestionnaire.csv  Beforetest_Questionnaire.csv  GlobalStats.csv  MusicExpert_stats.csv  OMSI_statisticalTests.csv  SUS_interact_statistics.csv  SUS_statistics.csv  bens-plots.ipynb  bens-stats.ipynb  followup-test.csv  followup-test.xlsx  paired_series_tests.csv  plot.ipynb  plotsInes.ipynb  statistics_plot.ipynb
Test Data Analysis/.ipynb_checkpoints/: Aftertest _Questionnaire-checkpoint.csv  plot-checkpoint.ipynb
Visualization_OSC_Linux/Visualization/: detected_object.h  message_handling.cpp  message_handling.h  utils.cpp  utils.h  visualization  visualization.cpp
Visualization_OSC_Windows/: Visualization.sln
Visualization_OSC_Windows/Visualization/: Visualization.vcxproj  Visualization.vcxproj.filters  visualizer.cpp
Visualization_OSC_Windows/Visualization/x64/Debug/: vc143.idb
Visualization_OSC_Windows/Visualization/x64/Release/: Visualization.exe.recipe  Visualization.iobj  Visualization.ipdb  Visualization.vcxproj.FileListAbsolute.txt
examples-linux/body tracking/body tracking/cpp/: CMakeLists.txt
examples-linux/body tracking/body tracking/csharp/: MainWindow.cs
examples-linux/body tracking/multi-camera/csharp/: MainWindow.cs
examples-linux/global localization/live/cpp/: CMakeLists.txt
examples-linux/global localization/playback/cpp/: CMakeLists.txt
examples-linux/zed one/cpp/: svo_external_data_playback.cpp  svo_playback.cpp
examples-windows/camera control/csharp/: Program.cs
examples-windows/positional tracking/slam-viewer/cpp/: CMakeLists.txt
examples-windows/positional tracking/slam-viewer/cpp/src/: main.cpp
examples/zed one/cpp/: CMakeLists.txt  svo_external_data_record.cpp
onestring_max_osc/: onestring_max_osc.maxproj
onestring_max_osc/patchers/: onestring_max_osc.maxpat  wavechain_string.maxpat  wavechain_string_2.maxpat
simplestringapp/: SimpleStringApp.jucer
simplestringapp/Builds/LinuxMakefile/: Makefile
simplestringapp/Builds/MacOSX/: Info-App.plist
simplestringapp/Builds/VisualStudio2017/: SimpleStringApp.sln  SimpleStringApp_App.vcxproj  SimpleStringApp_App.vcxproj.filters
simplestringapp/Builds/VisualStudio2019/: SimpleStringApp.sln  SimpleStringApp_App.vcxproj  SimpleStringApp_App.vcxproj.filters  resources.rc
simplestringapp/JuceLibraryCode/: JuceHeader.h
simplestringapp/Source/: AudioRec.h  BodyManager.cpp  BodyManager.h  DemoUtilities.h  Globals.cpp  Globals.h  Main.cpp  MainComponent.cpp  MainComponent.h  OSCDemo.h  OSCMonitor.h  SimpleString.cpp  SimpleString.h
(+92 files in other folders)
